# a

./: .ai-instructions  .checksyntax.out  .env.example  .gitignore  .gitmodules  CAHIER_DES_CHARGES_MODULE_BUILDER.md  CDN-README.md  CDN_publication.sh  CMakeLists.txt  COMPLETED_TABLE_CONVERSION.md  DEVELOPMENT_PROJECT_REPORT.md  DOCUMENTATION_SLIDERS_COMPLETE.md  GSAP-REORGANIZATION-SUMMARY.md  GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTELLIGENT_REGION_LOOP.md  NPM&CDN compatibility.md  PROBLEM-3-RESOLVED-FINAL.md  PROBLEMES_RESOLUS.md  PROJET_MOLECULE_DEBUG.md  PWA-COMPLETE-GUIDE.md  README.md  RECORDING_INTEGRATION_PLAN.md  SLIDER_DOCUMENTATION_COMPLETE.md  STYLING_API_DOCUMENTATION.md  Urgent_Files_to_remove.md  WAVESURFER_IMPLEMENTATION_COMPLETE.md  WAVESURFER_REORGANIZATION_COMPLETE.md  WAVESURFER_STATUS.md  WEBSOCKET-ORGANIZATION-COMPLETE.md  WEBSOCKET-TEST-GUIDE.md  WEBSOCKET-TEST-RESULTS.md  WHITE-SCREEN-FIX-SUMMARY.md  adole.sh  analysis.sh  analyze-structure.mjs  atome_Files_to_clean_or_remove.md  automated_region_tests.html  auv3.sh  basic-test.html  (+89 more)
.audit/: CODE_AUDIT_PROGRESS.md  PLAN_DECOUPAGE_EVEINTUITION.md  RAPPORT_FINAL_AUDIT.md  SUIVI_TACHES.md
.codex/: AGENTS.md  infos.md  pre_prompt_atome_future_code_guardrails_strict.md  visual-test-protocol.md
.github/: copilot-instructions.md
Failed/: file.md
Problems solving/: CORRECTIONS_APPLIED.md  EXTERNAL_DISPLAY_MIGRATION_NOTES.md  MIDI_CRASH_ANALYSIS.md
R&D/: Tauri Nativescript NodeGui.md  Texgen.js – Procedural Texture Generator | jQuery Plugins.webloc  atomic_object_demo_methods.js  atomic_object_desc_finalXXX.json  clock.html  convert_exmple.js  converter.js  eVeTGen6.html  extension.js  lib_to_intall.md  menu_goey copy.html  menu_goey.html  menu_goey_hexagoncal.html  menu_opening.html  schalkt-tgen- Seamless texture generator in javascript.webloc  verif.html
atome/renderers/bevy-core/: Cargo.toml
atome/renderers/bevy-core/assets/shaders/: video_external.wgsl
atome/renderers/bevy-core/src/: backdrop_blur.rs  backdrop_blur_tests.rs  backdrop_surface.rs  background.rs  clip.rs  components.rs  lib.rs  plugin.rs  procedural_sdf.rs  procedural_sdf_tests.rs  render_math.rs  render_ops.rs  resource_ops.rs  selection_overlay.rs  shadow_texture.rs  shape_shadow_overlay.rs  shape_shadow_overlay_tests.rs  spawn.rs  tests.rs  texture.rs  texture_sprite_color_tests.rs  types.rs  types_ops.rs  types_procedural.rs  video_diagnostics.rs  video_external_texture.rs  video_external_texture_tests.rs  video_external_web.rs  video_texture.rs  waveform_playback_overlay.rs  workspace_backdrop.rs  workspace_blur.rs  workspace_blur_tests.rs
atome/renderers/bevy-core/src/assets/shaders/: backdrop_surface.wgsl  procedural_sdf.wgsl  workspace_blur.wgsl
atome/renderers/bevy-core/src/ui/: mod.rs  tests.rs  types.rs
audit&bench/: benchmark.html  benchmark_en.html  performance_optimizations.md  performance_optimizations_en.md  safe_optimizations.md
cdn_npm_maker/: bundle-entry-clean.js  bundle-entry-new.js  bundle-entry-old.js  bundle-entry.js  rollup.config.cdn.js  rollup.config.npm.js
certs/: cert.pem  key.pem
database/: Atome.js  Project.js  User.js  adole.event_projection_invariants.test.mjs  adole.js  adole.particle_history_invariants.test.mjs  adole.sanitization.test.mjs  adole.snapshot_restore_invariants.test.mjs  adole.user_classification.test.mjs  adole_db_core.js  adole_history_transactions.js  adole_permissions.js  adole_schema_migrations.js  adole_snapshots.js  adole_storage_projection.js  adole_sync.js  db.js  driver.js  index.js  migrate.js  orm.js  orm.knex.backup.js  schema.sql  state_snapshot_restore.js
dev/: log_schema.json
documenations/: Matrix-Spacing-API.md  Module-API.md  STYLING_API_DOCUMENTATION.md  Slider_API.md
documentation/: Architecture.md  CDN-README.md  Core-API.md  Events-API.md  List-API.md  List-Migration-Guide.md  Matrix-API.md  Matrix-WebComponent-Guide.md  Migration-Guide.md  Modern-Particle-System-Architecture.md  Modern-Particle-System-Completion-Report.md  Modern-Particle-System-Final-Status.md  Modern-Usage-Guide.md  Module-API.md  Module-Animations-Guide.md  Module-Cleanup-Status.md  Module-Final-Status.md  Module-WebComponent-Guide.md  PLUGIN-SYSTEM-GUIDE.md  Particles-API.md  README-WebSocket.md  README.md  Slider-API.md  Styling-API.md  Table-API.md  Table-WebComponent-Guide.md  Usage-Sans-Attente.md  WaveSurfer-API.md
documentations/: !essentials.md  AI.md  Adole Offline Online explanations.md  Adole Sharing.md  Adole Time Machine.md  Adole apis.md  Adole messaging_system.md  Adole_Security_and_sharing.md  Auto_test_and _debug_atome.md  Benefits.md  CRUD_apis.md  Eden atome Database.md  Intuition_toolbox_menu_usage.md  aBox.md  adole_apis.md  atome_Audio_MVP.md  atome_audio_engine.md  atome_object.md  audio_engine_migration_synthesis.md  audio_engine_system_dependencies.md  audio_layer.md  audio_multitracks.md  audio_rec_dev.md  auv3_midi_output_troubleshooting_guide.md  auv3_sample_rate_detection.md  auv3_url_opening_and_squirrel_ui.md  auv3_webview_audio_injection.md  button_usage.md  calendar_api.md  calendar_ui.md  code&tools.md  components.md  console_api.md  databas_architecture.md  database_architecture.md  debug_mode.md  get_tempo.md  github_token_configuration.md  host_voice_recognition.md  how_to_read_atome_from_base.md  (+24 more)
documents/: PROJECT_DEVELOPMENT_LOG.md  (+9 more)
engines/audio/au/: CMakeLists.txt  Plugin.cpp  Plugin.h
src-audio-wasm/: Cargo.toml
src-audio-wasm/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native/: recorder.h  recorder.mm
src-tauri/permissions/: audio-engine.toml
src-tauri/src/: dev_logging.rs  iplug_bridge.rs  lib.rs  main.rs  molecule_store.rs  native_contacts.rs  native_recorder.rs
src-tauri/src/audio_engine/: bridge.rs  metering.rs  mod.rs  playback.rs  recorder.rs  tests.rs  transcode.rs
src-tauri/src/server/: local_atome.rs  local_auth.rs  mod.rs
src/core/: CMakeLists.txt  disk_reader.cpp  disk_reader_apple.mm  dsp_core.cpp  ring_buffer.cpp  ring_buffer.h
(+2304 files in other folders)
