[package]
name = "squirrel-audio-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM audio engine for Squirrel (CPAL + Kira)"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "AudioContext",
    "AudioWorklet",
    "MediaStream",
    "MediaStreamConstraints",
    "Navigator",
    "Window",
] }
cpal = { version = "0.15", features = ["wasm-bindgen"] }
kira = { version = "0.12", default-features = false, features = ["cpal", "wav", "mp3", "ogg", "flac"] }
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "ogg", "vorbis", "flac"] }
hound = "3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
once_cell = "1"

[profile.release]
opt-level = "s"
lto = true
