[package]
name = "squirrel"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "squirrel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "limit"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2"
futures-util = "0.3"
base64 = "0.22"
cpal = "0.15"
hound = "3"

# Local authentication dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# HTTP client for GitHub downloads
reqwest = { version = "0.11", features = ["json"] }

# ZIP extraction for updates
zip = "0.6"
tempfile = "3"
