[package]
name = "atome-bevy-renderer-core"
version = "0.1.0"
edition = "2021"
description = "Shared Bevy renderer core for Atome projections"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "default_app",
    "bevy_window",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_camera",
    "bevy_asset",
    "bevy_image",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "jpeg",
    "png",
    "webp",
    "webgpu",
] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlMediaElement", "HtmlVideoElement", "Window"] }
wgpu = { version = "27.0.1", default-features = false, features = ["webgpu"] }

[patch.crates-io]
wgpu = { path = "../wgpu-web-external-texture/wgpu-27.0.1" }
wgpu-types = { path = "../wgpu-web-external-texture/wgpu-types-27.0.1" }
